integ-tests/tests/snapshots/parser__array_within_dotted.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "fruit": {
    "apple": {
      "color": "red",
      "seeds": [
        {
          "size": 2
        }
      ]
    }
  }
}
