integ-tests/tests/snapshots/parser__booleans-2.snap
---
source: integ-tests/tests/parser.rs
expression: spans
---
note[bool]: root_false
  ┌─ booleans:2:11
  │
2 │ "false" = false
  │           ^^^^^

note[bool]: root_true
  ┌─ booleans:1:10
  │
1 │ "true" = true
  │          ^^^^

note[table]: root
  ┌─ booleans:1:1
  │  
1 │ ╭ "true" = true
2 │ │ "false" = false
3 │ │ 
  │ ╰^


