integ-tests/tests/snapshots/parser__booleans.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "false": false,
  "true": true
}
