integ-tests/tests/snapshots/parser__empty_string-2.snap
---
source: integ-tests/tests/parser.rs
expression: spans
---
note[string]: root_foo
  ┌─ empty_string:1:7
  │
1 │ foo = ""
  │       ^

note[table]: root
  ┌─ empty_string:1:1
  │
1 │ foo = ""
  │ ^^^^^^^^


