integ-tests/tests/snapshots/parser__floats.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
multi-dec-exp = 1.001
neg-exp = 1.0
normal = 1.0
normal-exp = 1.0
normal-neg-exp = 1.0
normal-pos-exp = 1.0
twenty = 20.0
twenty-exp = 200000000000.0
twenty-punkt-ett = 201000000000.0
two-exp = 20000000000.0
two-neg-exp = 0.0000000002
two-pos-exp = 20000000000.0
