integ-tests/tests/snapshots/parser__inline_tables.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "a": {},
  "b": {
    "b": 1
  },
  "c": {
    "b": 1
  },
  "d": {
    "a": 1,
    "b": 2
  },
  "e": {
    "a": 1,
    "b": 2,
    "c": {}
  },
  "f": {
    "a": []
  },
  "g": {
    "a": []
  },
  "h": [
    {},
    {}
  ]
}
